2021-03-07  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ganymede/dependency/Resolver.java:
	Quietly enforce only one SLF4J binding is added to the classpath.

	* Modified Analyzer.getShadedArtifactSet(File) to search for
	META-INF/shaded-artifacts before applying heuristics.  Generate
	META-INF/shaded-artifacts for ganymede-kernel.jar.

2021-03-05  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ganymede/dependency/Resolver.java:
	Refactored WorkspaceReader implementation to an inner class.

	* src/main/java/ganymede/notebook/Notebook.java:
	Created Notebook @SpringBootApplication to initialize JShell.

2021-03-04  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ganymede/dependency/Analyzer.java:
	Fixed bug in getArtifactFrom(Attributes,File).

2021-03-01  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ganymede/server/Message.java:
	Added execute_result(execution_count,String) method.

2021-02-28  Allen D. Ball  <ball@hcf.dev>

	* Added %%thymeleaf Magic.

	* Added Bindings parameter to
	Magic.execute(Bindings,String,String) interface.  In
	Shell.execute(String) method, synchronize __.bindings (defined in
	the JShell instance) with JShell.variables().

2021-02-26  Allen D. Ball  <ball@hcf.dev>

	* Added Magic.isComplete(String,String) interface method and
	implemented for Java Magic.

2021-02-25  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ganymede/install/Install.java:
	Added support for --id-prefix=PREFIX and --id-suffix=SUFFIX
	installation options.

	* Enable the Kernel @RestController.  Implement the print POST
	method and use the method to move MIME bundles from the JShell to
	the Kernel.

	* src/main/java/ganymede/connect/Connect.java:
	Always start the Kernel @RestController.

	* Re-branded as Ganymede.

2021-02-24  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/galyleo/shell/magic/AbstractScriptEngineMagic.java,
	src/main/java/galyleo/shell/magic/Javascript.java:
	Initial writing.

	* src/main/java/galyleo/dependency/Resolver.java: